<resources>
    <string name="app_name">Location Reminders</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_location_app_reminder">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>
    <string name="given_location">Given Location</string>
    <string name="cancel">Cancel</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="geofences_added">Geofence added.</string>


    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <string name="explanation_permission_denied">Please know you need to grant location permission.</string>
    <string name="permission_rationale_snackbar_button_text">Enable</string>
    <string name="permissions_background_denied">Cannot access background location.</string>
   <!-- <string name="change_permissions">Change Permissions</string>-->
    <string name="enable_google_location_services">Cannot save reminder. Make sure Google Location Services are enabled.</string>
    <string name="too_many_geofences">You have too many active reminders. Delete some to add more.</string>
    <string name="unknown_error">An unknown error occurred.</string>
    <string name="title_background_location_required_dialogue">Background Location Required</string>
    <string name="body_background_location_required_dialogue">Reminders will not be triggered unless this application can access your location whilst it is not running.\n\nClick the button below to accept the relevant permissions.</string>
    <string name="enablelocation_location_required">Enable Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message_authed">Hi %1$s! Did you know that %2$s.</string>
    <string name="login_prompt">Login to Enjoy Locations Reminder App!</string>
    <!--Shared Preference Keys -->
    <string name="welcome_text">Welcome to Locations Reminder App! Login to Enjoy</string>
    <string name="welcome_text_login">Welcome,your now logged in</string>
    <string name="access_location_needed">Access to your location is required.</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_permission_needed">Locations permissions were denied.</string>
    <string name="change_permissions">Change Permissions</string>
    <string name="my_location">My Location</string>
    <string name="reminder_details">Reminder Details</string>
    <string name="reminders_text_details">Finish Building The App</string>
    <string name="reminder_description_text">Finish setting up the app. Work with my boss to see if the app is ready for production</string>

</resources>
