...
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@{reminderDataItem.title}"
            android:layout_marginBottom="@dimen/margin_normal"
            android:id="@+id/reminderTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textAlignment="center"
            tools:text="@string/reminders_text_details" />

        <TextView
            android:layout_width="match_parent"
...
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_normal"
            android:text="@{reminderDataItem.description}"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            tools:text="@string/reminder_description_text"
            android:id="@+id/reminderDescription"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
...
